changed workload-settings service and component to save settings to backend, and be able to create multiple presets made header responsive
