# Backend/workload-management/src/main/java/workloadmanagement/workload/WorkloadSettings/WorkloadSettingsResponse.java
@@ -1,0 +1,17 @@
+package workloadmanagement.workload.WorkloadSettings;
+
+import lombok.*;
+
+import java.util.List;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class WorkloadSettingsResponse {
+    private int WorkloadSettingsId;
+    private String settingName;
+    private List<String> visibleColumns;
+    private boolean isDefault;
+}
