# Frontend/workload-management/src/openapi/openapi.json
@@ -114,6 +114,58 @@
         }
       }
     },
+    "/workload-settings": {
+      "get": {
+        "tags": [
+          "WorkloadSettings"
+        ],
+        "operationId": "findAllWorkloadSettings",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WorkloadSettingsResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "WorkloadSettings"
+        ],
+        "operationId": "saveWorkloadSettings",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/WorkloadSettingsRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/teaching-staff": {
       "get": {
         "tags": [
@@ -671,6 +723,107 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/WorkloadRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/workload-settings/{semesterId}": {
+      "get": {
+        "tags": [
+          "WorkloadSettings"
+        ],
+        "operationId": "findWorkloadSettingsById",
+        "parameters": [
+          {
+            "name": "semesterId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WorkloadSettingsResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "WorkloadSettings"
+        ],
+        "operationId": "deleteWorkloadSettingsById",
+        "parameters": [
+          {
+            "name": "semesterId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "WorkloadSettings"
+        ],
+        "operationId": "updateWorkloadSettingsById",
+        "parameters": [
+          {
+            "name": "semesterId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/WorkloadSettingsRequest"
               }
             }
           },
@@ -1662,6 +1815,26 @@
           "vacationMonths"
         ]
       },
+      "WorkloadSettingsRequest": {
+        "type": "object",
+        "properties": {
+          "isGlobal": {
+            "type": "boolean"
+          },
+          "settingName": {
+            "type": "string"
+          },
+          "visibleColumns": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "isDefault": {
+            "type": "boolean"
+          }
+        }
+      },
       "RegistrationRequest": {
         "type": "object",
         "properties": {
@@ -2144,11 +2317,11 @@
           "staffPhoto": {
             "type": "string"
           },
-          "staffFullName": {
-            "type": "string"
-          },
           "deleted": {
             "type": "boolean"
+          },
+          "staffFullName": {
+            "type": "string"
           },
           "rankFullName": {
             "type": "string"
@@ -2248,6 +2421,27 @@
           }
         }
       },
+      "WorkloadSettingsResponse": {
+        "type": "object",
+        "properties": {
+          "settingName": {
+            "type": "string"
+          },
+          "visibleColumns": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "default": {
+            "type": "boolean"
+          },
+          "workloadSettingsId": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "GrantedAuthority": {
         "type": "object",
         "properties": {
@@ -2298,13 +2492,13 @@
           "username": {
             "type": "string"
           },
+          "accountNonLocked": {
+            "type": "boolean"
+          },
           "credentialsNonExpired": {
             "type": "boolean"
           },
           "accountNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonLocked": {
             "type": "boolean"
           }
         },
